# ii-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MIGRATION_GUIDE.md  Makefile  README.md  alembic.ini  design_flaw.md  docker_obfuscate.py  e2b.Dockerfile  model_configs.example.yaml  mypy.ini  pyproject.toml  ruff.toml  settings.yaml.example  skill_refactor.md  start.sh  start_a2a_server.sh  start_sandbox_server.sh
.claude/agents/: api-backend.md  architecture-planner.md  code-quality.md  database-architect.md  devops-automation.md  documentation-maintainer.md  frontend-specialist.md  incident-commander.md  meta-agent.md  performance-optimizer.md  security-auditor.md  test-automation.md
.claude/lib/: activation-keywords.json  agent-templates.json  sdlc-patterns.md
.github/workflows/: build-deploy.yml  build-dev.yml  build-production.yml  build-shared.yml  build-wif.yml  claude-code.yml  codex-review.yml  gitleaks.yml
.reports/: codemap-diff.txt
.templates/nextjs-shadcn/: next.config.js  package.json
.templates/react-vite-shadcn/: package.json
docker/: .stack.env.example  docker-compose.dev.yaml  docker-compose.stack.yaml
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile
docker/postgres-init/: create-databases.sh
docker/sandbox/: .bashrc  claude_template.json  codex_config.toml  codex_context.md  entrypoint.sh  pyproject.toml  start-services.sh  template.css
docs/: CODE_REVIEW.md  DESIGN.md  FRONTEND.md  MIGRATION_GUIDE.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  a2a_metadata_en.md  database-design.md  docusaurus.config.ts  harness_guide.md  integration.md  other.md  package-lock.json  proposed_repo_structure.md  sidebars.ts  smoke.md
docs/CODEMAPS/: INDEX.md  QUICKSTART.md  architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/db/: claude_final_db_design.md
docs/design/: chat-agent-application-design.md  chat-agent-db-ownership.md  chat-agent-migration-plan.md  god-service-split.md  llm-refactor-plan.md  platform-database-redesign.md  platform-db-diagram.md  platform-target-schema.md
docs/design-docs/: core-beliefs.md  index.md  platform-db-redesign-review.md
docs/docs/: core-infrastructure.md  getting-started.md  installation.md  storybook-generation-migration-plan.md  welcome.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  platform-overview.md
docs/references/: e2b-llms.txt  fastapi-llms.txt  sqlalchemy-llms.txt
docs/setup/: sidebars.ts  stack-env.mdx
docs/unit/: README.md  auth.md  billing.md  celery.md  chat.md  content.md  core.md  engine.md  files.md  integrations.md  projects.md  realtime.md  scripts.md  sessions.md  settings.md  utils.md
frontend/: .env.example  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
legacy/: deck_builder.py  design_mode.py  design_mode_slide.py  design_tool_params.py  html_patch.py  lucide.py
migrations/: env.py
migrations/data/: slide_templates.csv
migrations/versions/: 0a1b2c3d4e5f_add_language_to_users.py  0e4d284c9df2_add_waitlist_table.py  11e415a01c38_add_conversation_summaries_table.py  1c77501fee34_add_agent_run_task_table.py  20260330_000000_initial_schema_consolidated.py  20260330_000001_seeding_data.py  20260402_000002_seed_slide_templates.py  2e8b1c9a7d66_add_media_templates_table.py  2f4e6d8c0b1a_drop_projects_user_name_unique_constraint.py  3a32c9ff5c2b_add_composio_integration_tables.py  3abf1a8d7b5e_add_metadata_to_chat_messages.py  46528d78fcbb_add_session_tracking_fields.py  4d383c356547_add_slide_templates_table_with_images_.py  56bc51d89bcf_add_chat_messages_table.py  5748a2cbf33f_generate_api_keys_for_existing_users.py  5794bd91f5ac_add_metadata_field_to_mcp_settings.py  67e27083b123_seed_media_templates_storybook.py  7c1b8f16c92b_set_beta_bonus_credits.py  8b8b9741a434_initial_migration.py  8c4d5a2f7b9c_merge_chat_media_heads.py  9b7fb0e8a6d2_add_project_tables.py  9d6b8c8e1bf2_add_provider_metadata_to_chat_messages.py  a1b2c3d4e5f6_create_provider_containers_table.py  a2b3c4d5e6f7_add_session_metadata_column.py  a4662ddf3ec4_merge_develop_and_feature_heads.py  ab143e0e2ac4_merge_plan_mode_and_develop_migrations.py  b001_schema_integrity_improvements.py  b002_credit_ledger_billing_system.py  b0c62aed4c83_seed_media_templates_storybook_v2.py  b3a8e2e98a7b_merge_heads.py  b3c4d5e6f7g8_add_skills_table.py  b6a3e2d4a1f1_add_stripe_billing_tables.py  (+30 more)
scripts/: backfill_billing_context.py  backfill_usage_records.py  run_sandbox_timeout_extension.sh  run_stack.sh  start.sh  start_a2a_server.sh  start_sandbox_server.sh
src/ii_agent/: app.py  (+2 more)
src/ii_agent/settings/skills/builtin/ii-app/scripts/ii-app-cli/: Cargo.toml
src/ii_agent/settings/skills/builtin/ii-app/scripts/ii-app-cli/src/: main.rs
(+2457 files in other folders)
