[project]
name = "ii-agent"
version = "0.1.0"
description = "Intelligent Agent platform with tools and MCP support"
readme = "README.md"
authors = [{ name = "Intelligent Internet", email = "info@ii.inc" }]
requires-python = ">=3.10"
dependencies = [
  "a2a-sdk==0.3.9",
  "httpx>=0.28.1",
  "anthropic[vertex]>=0.72.0",
  "dataclasses-json>=0.6.7",
  "duckduckgo-search>=8.0.1",
  "fastapi>=0.115.12",
  "google-cloud-aiplatform>=1.133.0",
  "google-genai>=1.66.0",
  "ii-researcher>=0.1.5",
  "jsonschema>=4.23.0",
  "mammoth>=1.9.0",
  "markdownify>=1.1.0",
  "pandas>=2.2.3",
  "pathvalidate>=3.2.3",
  "pdfminer-six>=20250506",
  "openai>=2.13.0",
  "pexpect>=4.9.0",
  "pillow>=11.2.1",
  "pillow-heif>=0.18.0",
  "pip>=25.1.1",
  "playwright==1.55.0",
  "prompt-toolkit>=3.0.51",
  "puremagic>=1.29",
  "pydub>=0.25.1",
  "pymupdf>=1.25.5",
  "pytest>=8.3.5",
  "python-dotenv>=1.1.0",
  "python-pptx>=1.0.2",
  "rich==14.1.0",
  "speechrecognition>=3.14.2",
  "tavily-python>=0.7.2",
  "tenacity>=9.1.2",
  "termcolor>=3.0.1",
  "uvicorn[standard]>=0.29.0,<0.30.0",
  "youtube-transcript-api>=1.0.3",
  "alembic>=1.16.1",
  "fastmcp==2.10.6",
  "libtmux==0.46.2",
  "bcrypt>=4.0.0",
  "PyJWT>=2.8.0",
  "email-validator>=2.0.0",
  "cryptography>=42.0.0",
  "fastapi-sso>=0.16.0",
  "aiosqlite>=0.21.0",
  "aiohttp>=3.11.18",
  "pydantic==2.11.7",
  "pydantic-settings>=2.10.1",
  "e2b-code-interpreter>=2.4.1",
  "elevenlabs==2.32.0",
  "python-socketio>=5.13.0",
  "gcloud-aio-storage==9.5.0",
  "transformers>=4.44.0",
  "weasyprint>=66.0",
  "python-magic>=0.4.27",
  "asyncpg>=0.30.0",
  "sqlalchemy>=2.0.36",
  "stripe>=11.1.0",
  "python-crontab>=2.7.1",
  "psycopg2-binary>=2.9.10",
  "ast-grep-cli>=0.39.5",
  "starlette[full]>=0.46.2",
  "redis>=5.0.0",
  "celery>=5.6.2",
  "pypdf>=6.1.1",
  "apscheduler>=3.11.0",
  "litellm>=1.63.14",
  "langchain-text-splitters>=1.0.0",
  "google-auth-oauthlib>=1.2.2",
  "google-api-python-client>=2.187.0",
  "ddgs>=9.9.1",
  "PyGithub>=2.5.0",
  "exa-py>=2.0.1",
  "requests>=2.32.3",
  "google-cloud-storage>=3.7.0",
  "json-repair>=0.54.3",
  "strictyaml>=1.7.0",
  "universal-pathlib>=0.2.0",
  "google-cloud-secret-manager>=2.20.0",
  "composio",
  "loguru>=0.7.3",
  "google-cloud-run>=0.15.0",
  "google-cloud-build>=3.35.0",
  "passlib>=1.7.4",
  "fal-client>=0.13.2",
  "minio>=7.2.0",
]

[project.optional-dependencies]
gaia = [
  "datasets>=3.6.0",
  "huggingface-hub>=0.31.1",
  "tavily-python>=0.7.2",
  "tenacity>=9.1.2",
  "termcolor>=3.0.1",
  "uvicorn[standard]>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ii_agent*", "ii_agent*", "ii_tool*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "smoke: Smoke tests",
    "external: Tests that require external services",
    "allowed_skip: Explicitly documented skip allowed in required suites",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["ii_agent", "ii_agent"]
omit = ["src/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
