[project]
name = "ii-sandbox"
version = "0.1.0"
description = "II Agent sandbox runtime (ii_server + ii_agent_tools)"
requires-python = ">=3.10"
dependencies = [
  # ii_server deps
  "fastmcp==2.10.6",
  "httpx>=0.28.1",
  "python-dotenv>=1.1.0",
  "libtmux==0.46.2",
  "pydantic==2.11.7",
  "pymupdf>=1.25.5",
  "requests>=2.32.3",
  "starlette[full]>=0.46.2",
  # ii_agent_tools deps
  "aiohttp>=3.11.18",
  "anyio>=4.0.0",
  "beautifulsoup4>=4.12.0",
  "ddgs>=9.9.1",
  "elevenlabs==2.32.0",
  "fal-client>=0.13.1",
  "fastapi>=0.115.12",
  "gcloud-aio-storage==9.5.0",
  "google-genai>=1.57.0,<1.60",
  "google-cloud-aiplatform>=1.133.0",
  "openai>=2.13.0",
  "pydantic-settings>=2.10.1",
  "PyJWT>=2.8.0",
  "tavily-python>=0.7.2",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.29.0,<0.30.0",
  "vertexai>=1.0.0",
  "strictyaml>=1.7.0",
  # shared
  "playwright==1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ii_server", "src/ii_agent_tools"]
